--- a/Tip-calculator/src/index.css
+++ b/Tip-calculator/src/index.css
@@ -13,3 +13,13 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+
+/* body {
+  margin: auto;
+  display: flex;
+  place-items: center;
+
+  min-width: 320px;
+  min-height: 100vh;
+} */
+
